# COMTRAC

./: .290323_Mockup_V2.pdf.icloud  01_Paraphrasen.docx  01_Transkript.docx  02_Paraphrasen.docx  02_Transkript.docx  03_Transkript.docx  Bachelorarbeit.docx  Datenschutz OpenAi Whisper.docx  Diagramme_Symptomverlauf.xlsx  Inhaltsanalyse .docx  Konzept_Usability-Evaluation.docx  Prototyping.docx  Todo_Prototyp.docx  Zeitplan-BA.xlsx  ~$_Transkript.docx  ~$chelorarbeit.docx  ~WRL3702.tmp
Auswertung_Fokusgruppen_01/: 01_Paraphrasen.docx  01_Transkript.docx  02_Paraphrasen.docx  02_Transkript.docx  03_Paraphrasen.docx  03_Transkript.docx  Beschreibung der Kategorien.docx  Beschreibung der Klassen .docx  Endergebnisse_Fokusgruppe.docx  LPm_Transkript.docx  LPw_Paraphrasen.docx  LPw_Transkript.docx  Nutzeranforderungen.docx  Nutzeranforderungen_Reduktion.docx  Nutzeranforderungen_Zusammengefasst .docx  PrEP_Paraphrasen.docx  Zusammenstellung der Kategorien.xlsx  v01_Nutzeranforderungen.docx  v02_Nutzeranforderungen_Zusammengefasst.docx  v04_Nutzeranforderungen.docx  ~$Zusammenstellung der Kategorien.xlsx  ~$_Paraphrasen.docx  ~$_Transkript.docx  ~$schreibung der Kategorien.docx  ~$tzeranforderungen.docx  ~$tzeranforderungen_Zusammengefasst .docx  ~WRL0005.tmp  ~WRL0943.tmp  ~WRL2343.tmp
Usability-Test/: Konzept.docx  TA-Test.docx
Usability-Test/TA-Test/TA-Test/: Auswertung_Interview.xlsx
database/: dbComtrac.db  dbComtrac.sqbpro
src/COMTRAC_App/: .ninja_deps  .ninja_log  build.ninja
src/COMTRAC_App/.qt_plugins/: Qt6_QmlPlugins_Imports_appcomtrac.cmake  Qt6_QmlPlugins_Imports_appcomtrac.rsp
src/COMTRAC_App/.rcc/: appcomtrac_raw_qml_0.qrc  qrc_appcomtrac_raw_qml_0.cpp  qrc_qmake_comtrac.cpp
src/COMTRAC_App/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  build.ninja
src/COMTRAC_App/comtrac/: qmldir
src/COMTRAC_App/meta_types/: appcomtrac_json_file_list.txt  appcomtrac_json_file_list.txt.timestamp
src/build-Comtrac/: CMakeCache.txt
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appcomtrac.cmake  Qt6_QmlPlugins_Imports_appcomtrac.rsp
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.rcc/: appcomtrac_raw_qml_0.qrc  qmake_comtrac.qrc  qrc_appcomtrac_raw_qml_0.cpp  qrc_qmake_comtrac.cpp
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/appcomtrac_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/comtrac/: HomeScreen.qml  Login.qml  Main.qml  qmldir
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/meta_types/: appcomtrac_json_file_list.txt  appcomtrac_json_file_list.txt.timestamp  qt6appcomtrac_debug_metatypes.json  qt6appcomtrac_debug_metatypes.json.gen
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/qmltypes/: appcomtrac_foreign_types.txt
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
src/build-comtrac-Desktop_Qt_6_4_3_MinGW_64_bit-Release/.qt_plugins/: Qt6_QmlPlugins_Imports_appcomtrac.cmake
src/build-comtrac-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appcomtrac_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-comtrac-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/comtrac/: qmldir  (+1 more)
src/build-comtrac-WebAssembly_Qt_6_4_3-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appcomtrac.js  appcomtrac_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-comtrac-WebAssembly_Qt_6_4_3-MinSizeRel/: CMakeCache.txt  qtcsettings.cmake
src/build-comtrac-WebAssembly_Qt_6_4_3-Profile/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appcomtrac.js  build.ninja  cmake_install.cmake
src/build-comtrac-WebAssembly_Qt_6_4_3-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appcomtrac.html  appcomtrac.js  build.ninja  cmake_install.cmake  qtcsettings.cmake
src/build-comtrac-WebAssembly_Qt_6_5_0_multi_threaded-Debug/: CMakeCache.txt.prev
src/build-comtrac-WebAssembly_Qt_6_5_0_multi_threaded-Profile/: CMakeCache.txt  qtcsettings.cmake
src/comtrac/: CMakeLists.txt  loginmodel.h  main.cpp  main.qml
src/comtrac/Controllers/: medication.cpp  medication.h  symptom.cpp  symptom.h  symptomdiary.cpp  symptomdiary.h
src/comtrac/Models/: applicationmanager.cpp  applicationmanager.h  dbmanager.cpp  dbmanager.h  intaketime.cpp  intaketime.h  login.cpp  login.h  loginmodel.cpp  loginmodel.h  medication.cpp  medication.h  medicationmodel.cpp  medicationmodel.h  message.cpp  message.h  messagemodel.cpp  messagemodel.h  symptom.cpp  symptom.h  symptom.h.autosave  symptommodel.cpp  symptommodel.h  user.cpp  user.h
src/comtrac/Ui/: ButtonTemplate.qml  Chat.qml  HeaderTemplate.qml  HomeScreen.qml  Login.qml  Main.qml  Medication.qml  MedicationPlan.qml  StackViewPage.qml  SymptomDiary.qml  SymptomHistory.qml  VideoTelephony.qml  VirtualAppointment.qml  WaitingRoom.qml  editMedication.qml  editSymptom.qml  findMedication.qml  findSymptom.qml
src/comtrac/Ui/Components/: Background.qml  ButtonTemplate.qml  CalendarTemplate.qml  ComboBoxTemplate.qml  DialogTemplate.qml  HeaderTemplate.qml  HeaderTemplate.qml.autosave  IntakeTimeList.qml  MedicationField.qml  MessageDelegate.qml  MonthGridDelegate.qml  PopupTemplate.qml  PopupTemplateLogic.qml  RoundButtonTemplate.qml  SliderTemplate.qml  SliderTemplate.qml.autosave  SwitchTemplate.qml  SymptomDelegate.qml  SymptomEntry.qml  SymptomList.qml  TextFieldComponent.qml  TextTemplate.qml  TimePickerTemplate.qml  searchTemplate.qml
src/comtrac/database/: dbComtrac.db  dbComtrac.db-journal  test.db
(+1189 files in other folders)
